--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
   "functions": {
     "api/*": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "build": {
-    "env": {
-      "NODE_VERSION": "18.x"
+      "runtime": "nodejs18"
     }
   }
 }
